nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test-depl
  template:
    metadata:
      labels:
        app: nginx-test-depl
    spec:
      containers:
      - name: nginx
        image: nginx:1.24.0
        ports:
        - containerPort: 80
