nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
#    namespace: foo
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.linuxeval.eu.org
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nginx-test-service
                port:
                  number: 80
            path: /
  tls:
  - hosts:
    - nginx.linuxeval.eu.org
    secretName: default-example
